tests-integration/tests/roundtrip/native-errors/syntax-errors/unexpected-token-03/unexpected-token-03.eprime
find a,b,c: int(1..3)
print a